# Medusa

./: .checkignore  .codacy.yml  .codebeatignore  .codecov.yml  .dockerignore  .editorconfig  .eslintignore  .eslintrc  .gitattributes  .gitignore  .pullapprove.yml  .pyup.yml  .travis.yml  .yarnrc  0001-Update-indexer_base.py-3813.patch  0002-Fix-Start-medusa-service-after-network.target-3816.patch  0003-Feature-fix-tabs-3815.patch  0004-Feature-anime-parsing-3809.patch  0005-Initial-Python-3-compatibility-3796.patch  0006-editShow.mako-Replacing-get-seriesObj-from-mako-pyth.patch  0007-Fixed-quotes-and-removed-json.dumps.patch  0008-Styled-the-anidbReleaseGroupUi.mako-component.patch  0009-Fixed-the-propagation-of-the-list-of-strings-for-the.patch  CHANGELOG.md  CONTRIBUTING.md  COPYING.txt  Dockerfile  MANIFEST.in  SickBeard.py  api-description.yml  code-of-conduct.md  coverage.xml  dredd.yml  dredd_hook.py  gulpfile.js  mynzb.nzb  network_timezones.txt  package.json  pr.txt  pyproject.toml  (+9 more)
.build/: Gruntfile.js  bower.json  package.json
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  build-themes-check.sh  check_changes.py  check_version.py  config.yml
Medusa-develop/: .codecov.yml  .gitattributes  CONTRIBUTING.md
dredd/: .gitignore  api-description.yml  dredd.yml  dredd_hook.py
ext/: attr.py  configobj.py  dry_attr.py  profilehooks.py  rarfile.py  readme.md  ttl_cache.py
ext2/: configparser.py
hooks/: build
lib/: contextlib2.py  pathlib2.py  profilehooks.py  rarfile.py  readme.md  scandir.py
medusa/: __init__.py  __main__.py  app.py  auto_post_processor.py  auto_postprocessor.py  black_and_white_list.py  blackandwhitelist.py  browser.py  bs4_parser.py  cache.py  classes.py  common.py  config.py  date_time.py  (+57 more)
(+3631 files in other folders)
