[project]
name = "medusa"
version = "1.0.25"
description = "Automatic Video Library Manager for TV Shows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "adba",
    "appdirs==1.4.4",
    "attrs==25.4.0",
    "babelfish==0.6.1",
    "beautifulsoup4==4.14.2",
    "bencode-py==4.0.0",
    "cachecontrol==0.14.3",
    "certifi==2025.10.5",
    "cloudscraper==1.2.71",
    "configobj==5.0.9",
    "contextlib2==21.6.0",
    "deluge-client==1.10.2",
    "diskcache==5.6.3",
    "dogpile-cache==1.3.4",
    "enzyme==0.5.2",
    "feedparser==6.0.12",
    "gntp==1.0.3",
    "guessit==3.8.0",
    "html5lib==1.1",
    "jsonrpclib-pelix==0.4.3.4",
    "mako==1.3.10",
    "markdown2==2.5.4",
    "packaging==25.0",
    "profilehooks==1.13.0",
    "pygithub==2.8.1",
    "pyjwt==2.10.1",
    "pymediainfo==7.0.1",
    "python-dateutil==2.9.0.post0",
    "python-twitter==3.5",
    "pytimeparse",
    "pytrakt==4.2.2",
    "pyyaml==6.0.3",
    "rarfile==4.2",
    "rebulk==3.2.0",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "six==1.17.0",
    "subliminal==2.2.1",
    "tmdbsimple==2.9.1",
    "tornado==6.5.2",
    "tornroutes==0.5.1",
    "trans==2.1.0",
    "ttl-cache==1.6",
    "tvdbapiv2",
    "urllib3==2.5.0",
    "validators==0.35.0",
]

[tool.uv.sources]
adba = { url = "https://github.com/pymedusa/adba/archive/37b0c74e76b40b3dbde29e71da75a1808eb121de.zip" }
pytimeparse = { url = "https://github.com/pymedusa/pytimeparse/archive/8f2832597235c6ec98c44de4dab3274927f67e29.zip" }
tvdbapiv2 = { url = "https://github.com/pymedusa/tvdbv2/archive/d6d0e9d98071c2d646beb997b336edbb0e98dfb7.zip" }
